src/test/ui/error-codes/E0597.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/E0597.rs:8:17
   |
LL |     x.x = Some(&y);
   |                 ^ borrowed value does not live long enough
LL |
LL | }
   | - `y` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
